# weather-thingy-particle

./: .editorconfig  .gitignore  .travis.yml  Dockerfile  README.md  go.sh  main.ino  package.json
gulpfile.js/: .jshintrc  config.js  index.js  particleHelpers.js
gulpfile.js/tasks/: build.js  flash-cloud.js  flash-local.js  setup.js  test.js
gulpfile.js/tasks/clean/: buildFiles.js  default.js  firmware.js  tests.js
gulpfile.js/tasks/lint/: default.js  firmware.js  jshint.js  tests.js
src/: dataUploader.cpp  dataUploader.hpp  main.cpp  main.ino  persistentStorage.cpp  persistentStorage.hpp  rht03.cpp  rht03.hpp  temt6000.cpp  temt6000.hpp
tests/: CMakeLists.txt  dataUploader.cpp  main.cpp  persistentStorage.cpp  rht03.cpp  temt6000.cpp
tests/libs/: CMakeLIsts.txt  CMakeLists.txt
tests/libs/catch/: CMakeLists.txt
tests/libs/fakeParticle/: CMakeLists.txt  application.h  fakeParticle.hpp
tests/libs/fakeParticle/api/: action.cpp  action.hpp  condition.cpp  condition.hpp  eventChain.cpp  eventChain.hpp  exceptions.cpp  exceptions.hpp  fakeParticleDevice.cpp  fakeParticleDevice.hpp  particleEvent.hpp  timeUnit.cpp  timeUnit.hpp  utilities.cpp  utilities.hpp
tests/libs/fakeParticle/api/chainEntries/: actionChainEntry.cpp  actionChainEntry.hpp  chainEntry.cpp  chainEntry.hpp  conditionChainEntry.cpp  conditionChainEntry.hpp  waitChainEntry.cpp  waitChainEntry.hpp
tests/libs/fakeParticle/api/expectations/: expectation.cpp  expectations.hpp  pinModeExpectation.cpp  pinStateExpectation.cpp
tests/libs/fakeParticle/fakes/: eeprom.cpp  eeprom.hpp  gpio.cpp  gpio.hpp  particle.cpp  particle.hpp  tcpclient.cpp  time.cpp  usbserial.cpp  usbserial.hpp
